--- a/lesson6/sqlboiler.toml
+++ b/lesson6/sqlboiler.toml
@@ -5,7 +5,7 @@ output = "models"
 wipe = true
 
 templates = [
-  "/home/ec2-user/go/pkg/mod/github.com/volatiletech/sqlboiler/v4@v4.16.2/templates",
+  "/home/ec2-user/go/pkg/mod/github.com/volatiletech/sqlboiler/v4@v4.16.2/templates/main",
   "/home/ec2-user/go/pkg/mod/github.com/volatiletech/sqlboiler/v4@v4.16.2/templates/test",
   "templates",
 ]
